--- a/static/css/feedback.css
+++ b/static/css/feedback.css
@@ -26,17 +26,17 @@ html, body{
 }
 
 
-.main__text {
+.main-text {
     display: flex;
     align-items: center;
     margin-left: 5%;
     text-transform: uppercase;
 }
 
-.main__text h1{
+.main-text h1{
     margin-left: auto;
     font-size: 5rem;
-    color: #fff !important;
+    color: #fff;
 }
 
 .col-10, .col-1 {padding: 0 !important;}
@@ -52,7 +52,7 @@ textarea{
         height: 80vh;
     }
 
-    .main__text h1{
+    .main-text h1{
         font-size: 3rem !important;
     }
 }
@@ -62,28 +62,45 @@ textarea{
         height: 70vh;
     }
 
-    .main__text {
+    .main-text {
         margin-top: .5rem;
         justify-content: center;
     }
-
-    .main__text h1{
+    .main-text h1{
         font-size: 2rem !important;
         margin-left: auto;
         margin-right: auto;
     }
 }
 
+@media screen and (max-width : 425px){
+    .main-wrapper{
+        animation: none;
+    }
+    .form-wrapper {
+        height: 75vh;
+        margin-left: 1rem !important;
+    }
+    .main-text {
+        margin-top: 1.5rem;
+        justify-content: center;
+    }
+    .main-text h1 {
+        margin-left: auto;
+        margin-right: auto;
+        font-size: 1rem;
+    }
+}
 
-.slider__container {
-    width: 100%; /* Width of the outside container */
+.slider-container {
+    width: 100%;
 }
 
 input[type=range] {
-    -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
-    width: 100%; /* Specific width is required for Firefox. */
+    -webkit-appearance: none;
+    width: 100%;
     height: 25px;
-    background: transparent; /* Otherwise white in Chrome */
+    background: transparent;
   }
   
   input[type=range]::-webkit-slider-thumb {
@@ -91,20 +108,17 @@ input[type=range] {
   }
   
   input[type=range]:focus {
-    outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
+    outline: none;
   }
   
   input[type=range]::-ms-track {
     width: 100%;
     cursor: pointer;
-  
-    /* Hides the slider so custom styles can be added */
     background: transparent; 
     border-color: transparent;
     color: transparent;
   }
 
-  /* Special styling for WebKit/Blink */
 input[type=range]::-webkit-slider-thumb {
     -webkit-appearance: none;
     border: 1px solid #2196F3;
@@ -114,7 +128,6 @@ input[type=range]::-webkit-slider-thumb {
     cursor: pointer;
   }
   
-  /* All the same stuff for Firefox */
   input[type=range]::-moz-range-thumb {
     border: 1px solid #2196F3;
     height: 25px;
@@ -123,12 +136,11 @@ input[type=range]::-webkit-slider-thumb {
     cursor: pointer;
   }
   
-  /* All the same stuff for IE */
   input[type=range]::-ms-thumb {
     border: 1px solid #2196F3;
     height: 25px;
     width: 20px;
-    background: #ffffff;
+    background: #2196F3;
     cursor: pointer;
   }
 
@@ -138,10 +150,6 @@ input[type=range]::-webkit-slider-runnable-track {
   height: 24px;
   cursor: pointer;
   background: #2196F3;
-}
-
-input[type=range]:focus::-webkit-slider-runnable-track {
-  background: #1976D2;
 }
 
 input[type=range]::-moz-range-track {
@@ -158,18 +166,6 @@ input[type=range]::-ms-track {
   background: transparent;
   border-color: transparent;
   color: transparent;
-}
-input[type=range]::-ms-fill-lower {
-  background: #2196F3;
-}
-input[type=range]:focus::-ms-fill-lower {
-  background: #1976D2;
-}
-input[type=range]::-ms-fill-upper {
-  background: #fff;
-}
-input[type=range]:focus::-ms-fill-upper {
-  background: #fff;
 }
 
 @keyframes animationBg {
