--- a/static/css/404.css
+++ b/static/css/404.css
@@ -1,14 +1,14 @@
-.error-name::after{
+.error-wrapper::after{
     content: '';
     position: absolute;
-    top: 2.5rem;
+    top: 0;
     left: 0;
     width: 100%;
     height: 20px;
     background-color: #7e57c2;
     animation: scale 1s linear;
 }
-.error-name::before {
+.error-wrapper::before {
     content: '';
     position: absolute;
     bottom: 0;
