--- a/static/css/main.css
+++ b/static/css/main.css
@@ -14,6 +14,26 @@ html, body{
     display: flex;
     justify-content: center;
 }
+.language-btn-block {
+    margin-top: 1rem;
+}
+.language-btn {
+    margin-left: auto;
+    color: #7e57c2 !important;
+    font-size: x-large;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    background-color: #b39ddb;
+    border-radius: 5px;
+}
+.language-btn:hover {
+    background-color: #7e57c2;
+    cursor: pointer;
+    color: #f5f5f5 !important;
+
+}
 
 .main__content {
     display: flex;
@@ -28,19 +48,22 @@ html, body{
 .main__content h2 {
     color: #7e57c2;
 }
-.error-wrapper { 
+.error { 
+    align-items: center;
+    justify-content: center;
+}
+.error-wrapper {
+    height: 50vh;
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 2%;
 }
-
 .error-name {
-    display: inline-block;
-    position: relative;
     font-size: 20rem;
     margin-bottom: 0;
     color: #7e57c2;
+    padding-bottom: 2.5rem;
 }
 .error-description {
     display: flex;
@@ -118,7 +141,7 @@ html, body{
 /* Media queries/ Медиа запросы  */
 @media screen and (max-width: 1024px) {
     .error-wrapper {
-        margin-top: 0;
+        height: 45vh;
     }
     .error-name {
         font-size: 18rem;
@@ -126,19 +149,24 @@ html, body{
 }
 @media screen and (max-width : 768px) {
     .error-wrapper {
-        margin-top: 0;
+        height: 35vh;
     }
     .error-name {
         font-size: 14rem;
+        padding-bottom: 2rem;
     }
 }
 @media screen and (max-width : 425px) {
-    .error-wrapper {
-        margin-top: 0;
+    .language-btn {
+        margin-right: 10px;
     }
     .error-name {
         font-size: 12rem;
-    }   
+    }  
+    .back-btn, .forward-btn {
+        height: 55px;
+        width: 55px;
+    }
 }
 
 
