--- a/static/css/main.css
+++ b/static/css/main.css
@@ -34,20 +34,6 @@ html, body{
     color: #f5f5f5 !important;
 
 }
-
-.main__content {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
-.main__content h1 {
-    font-size: 5rem;
-    color: #7e57c2;
-}
-.main__content h2 {
-    color: #7e57c2;
-}
 .error { 
     align-items: center;
     justify-content: center;
@@ -146,6 +132,10 @@ html, body{
     .error-name {
         font-size: 18rem;
     }
+
+    .forward-btn-text {
+        font-size: normal;
+    }
 }
 @media screen and (max-width : 768px) {
     .error-wrapper {
@@ -166,6 +156,9 @@ html, body{
     .back-btn, .forward-btn {
         height: 55px;
         width: 55px;
+    }
+    .error-description > h1 {
+        font-size: 2rem;
     }
 }
 
